--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
         app:layout_constraintVertical_bias="0.91" />
 
     <LinearLayout
-        android:layout_width="413dp"
-        android:layout_height="477dp"
+        android:layout_width="387dp"
+        android:layout_height="381dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,13 +42,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="71dp"
+            android:layout_height="115dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/czarekjpg"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
+                android:layout_width="212dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/blackfireice" />
 
@@ -65,14 +65,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="74dp"
+            android:layout_height="115dp"
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="120dp"
+                android:id="@+id/martajpg"
+                android:layout_width="212dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#00A82121"
                 app:srcCompat="@drawable/marta" />
 
             <TextView
